# jam

./: .gitignore  README.md  cargo.toml
examples/hello_jamlang/: .gitignore  jammy.toml
examples/hello_jamlang/src/: main.jam
examples/raylib_window/: .gitignore  jammy.toml
examples/raylib_window/src/: raylib.jam  rayother.jam  raytest.jam
jam_install/: setup.bat
jam_install/import/clib/: math.jam  stdio.jam  stdlib.jam  string.jam  type.jam
jam_install/import/jamstd/: list.jam
jamc/: Cargo.toml
jamc/src/: intrinsics.jam  main.rs
jamc/src/frontend/: ast.rs  jam_include.rs  mod.rs  parser.rs  sema.rs  tokenizer.rs
jamc/src/wasm_backend/: casting.rs  function_ctx.rs  mod.rs  stack.rs  wasm_binops.rs  wasm_codegen.rs  wasm_composites.rs  wasm_debug.rs  wasm_exports.rs  wasm_expression.rs  wasm_function.rs  wasm_globals.rs  wasm_lvalue.rs  wasm_mem.rs  wasm_statement.rs  wasm_struct.rs
jammy/: Cargo.toml
jammy/src/: main.rs
jamrt/: .gitignore  Cargo.toml
jamrt/src/: byte_loader.rs  gl_bindings.rs  jam_types.rs  main.rs  window.rs
vs_code/jam/: CHANGELOG.md  README.md  language-configuration.json  package-lock.json  package.json  vsc-extension-quickstart.md
vs_code/jam/syntaxes/: jam.tmLanguage.json
xtask/: Cargo.toml
xtask/src/: main.rs
