[package]
name = "jamc"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
colored = "3.0.0"
hashbrown = "0.15.3"
lazy_static = "1.5.0"
logos = "0.15.0"
regex = "1.11.1"
walkdir = "2.5.0"
wasm-encoder = "0.234.0"
wasmparser = "0.235.0"
wasmprinter = "0.235.0"
wat = "1.235.0"
