[package]
name = "jamrt"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-fs = "2.1.2"
bytemuck = { version = "1.23.1", features = ["derive"] }
cfg-if = "1.0.1"
image = "0.25.6"
lazy_static = "1.5.0"
miniquad = "0.4.8"
reqwest = "0.12.21"
smol = "2.0.2"
stable-vec = "0.4.1"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
wasmer = "6.0.1"
web-sys = {version = "0.3.77", features = [
    "Document",
    "Window",
    "Element",
    "Location",
]}
